started the process of changing the references to Arduino in the translation files

--- a/app/src/processing/app/Resources_an.po
+++ b/app/src/processing/app/Resources_an.po
@@ -442,8 +442,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Una nueva versión d'Arduino ye disponible,\n"
 "Te fería goyo de visitar agora a pachina de descargas d'Arduino?"
