--- a/app/src/processing/app/Resources_gl.po
+++ b/app/src/processing/app/Resources_gl.po
@@ -440,8 +440,8 @@ msgstr ""
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Está dispoñible unha nova versión de Arduino,\n"
 "desexa visitar a páxina de descargas de Arduino?"
