--- a/app/src/processing/app/Resources_sl.po
+++ b/app/src/processing/app/Resources_sl.po
@@ -428,8 +428,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr "Dostopna je nova različica Arduino.\n"
 "Ali želite obiskati stran za prenos Arduino?"
 
