--- a/app/src/processing/app/Resources_ca.po
+++ b/app/src/processing/app/Resources_ca.po
@@ -437,8 +437,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Una nova versió de l'Arduino està disponible,\n"
 "voldria visitar la pàgina de descarrega d'Arduino?"
