--- a/app/src/processing/app/Resources_da.po
+++ b/app/src/processing/app/Resources_da.po
@@ -439,8 +439,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Der er en ny version af Arduino,\n"
 "vil du gerne besøge Arduino's download side?"
