--- a/app/src/processing/app/Resources_el.po
+++ b/app/src/processing/app/Resources_el.po
@@ -429,8 +429,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr "Μια νέα έκδοση του Arduino είναι διαθέσιμη,\nθα θέλατε να επισκεφθείτε την σελίδα κατεβάσματος του Arduino;"
 
 #: UpdateCheck.java:108 Preferences.java:76
