--- a/app/src/processing/app/Resources_es.po
+++ b/app/src/processing/app/Resources_es.po
@@ -445,8 +445,8 @@ msgstr ""
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Una nueva versión de Arduino Está disponible,\n"
 "¿Deseas visitar la página de descargas de Arduino?"
