--- a/app/src/processing/app/Resources_et.po
+++ b/app/src/processing/app/Resources_et.po
@@ -436,8 +436,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Saadaval on uuem versioon Arduinost.\n"
 "Kas soovid allalaadimislehte külastada?"
