--- a/app/src/processing/app/Resources_fr.po
+++ b/app/src/processing/app/Resources_fr.po
@@ -456,8 +456,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Une nouvelle version d'Arduino est disponible,\n"
 "voulez-vous visiter la page de téléchargement ?"
