--- a/app/src/processing/app/Resources_hu.po
+++ b/app/src/processing/app/Resources_hu.po
@@ -438,8 +438,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Új kiadás jelent meg Arduino-ból,\n"
 "megmutassam a letöltési oldalt?"
