--- a/app/src/processing/app/Resources_id.po
+++ b/app/src/processing/app/Resources_id.po
@@ -439,8 +439,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Sebuah versi baru Arduino telah tersedia,\n"
 "apakah anda ingin mengunjungi halaman unduh Arduino?"
