--- a/app/src/processing/app/Resources_ja.po
+++ b/app/src/processing/app/Resources_ja.po
@@ -439,8 +439,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Arduino IDEの新しいバージョンが入手可能になりました。\n"
 "ダウンロードページを開きますか？"
