--- a/app/src/processing/app/Resources_lt.po
+++ b/app/src/processing/app/Resources_lt.po
@@ -440,8 +440,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Yra nauja Arduino programos versija,\n"
 "ar norite eiti į Arduino atsisiuntimų tinklapį?"
