--- a/app/src/processing/app/Resources_mr.po
+++ b/app/src/processing/app/Resources_mr.po
@@ -428,8 +428,8 @@ msgstr ""
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 
 #: UpdateCheck.java:108 Preferences.java:76
