--- a/app/src/processing/app/Resources_nl.po
+++ b/app/src/processing/app/Resources_nl.po
@@ -440,8 +440,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Er is een nieuwe versie van Arduino beschikbaar,\n"
 "wilt u de Arduino download pagina bezoeken?"
