--- a/app/src/processing/app/Resources_pt_br.po
+++ b/app/src/processing/app/Resources_pt_br.po
@@ -434,8 +434,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr "Uma nova versão de Arduino está disponível,\nvocê gostaria de visitar a página de download?"
 
 #: UpdateCheck.java:108 Preferences.java:76
