--- a/app/src/processing/app/Resources_pt_pt.po
+++ b/app/src/processing/app/Resources_pt_pt.po
@@ -438,8 +438,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr "Uma nova versão do Arduino está disponível,\n"
 "quer visitar a página do Arduino para descarregar?"
 
