--- a/app/src/processing/app/Resources_ta.po
+++ b/app/src/processing/app/Resources_ta.po
@@ -438,8 +438,8 @@ msgstr "http://www.arduino.cc/latest.txt"
 
 #: UpdateCheck.java:103
 msgid ""
-"A new version of Arduino is available,\n"
-"would you like to visit the Arduino download page?"
+"A new version of Open SmartWatch is available,\n"
+"would you like to visit the Open SmartWatch download page?"
 msgstr ""
 "Arduinoவின் புதிய பதிப்பு கிடைக்கிறது,\n"
 "நீங்கள் Arduino பதிவிறக்க பக்கத்தை காண விரும்புகிறீர்களா?"
